--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 <div id="modal__Container">
     <div class="modal__wrapper">
-        <div ><h2>Создать локацию</h2></div>
+        <div ><h2>Изменить локацию %название%</h2></div>
         <form action="">
             <label >
                 <input type="text" placeholder="Название">
