--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="sideBar_Img"><img src="./image/icons/location.png" alt=""></div>
                 <div class="sidebar_Text"><span>Локации</span></div>
             </div>
-            <div class="sideBar__Item">
+            <div class="sideBar__Item" onclick="navigate('settings')">
                 <div class="sideBar_Img"><img src="./image/icons/settings.png" alt=""></div>
                 <div class="sidebar_Text"><span>Настройки</span></div>
             </div>
@@ -242,6 +242,7 @@
 
 </footer>
 <script src="script/modal.js"></script>
+<script src="script/script.js"></script>
 
 </body>
 </html>
