--- a/settings.html
+++ b/settings.html
@@ -34,7 +34,7 @@
                 <div class="sideBar_Img"><img src="./image/icons/notifications.png" alt=""></div>
                 <div class="sidebar_Text"><span>Уведомления</span></div>
             </div>
-            <div class="sideBar__Item" >
+            <div class="sideBar__Item" onclick="navigate('index')">
                 <div class="sideBar_Img"><img src="./image/icons/location.png" alt=""></div>
                 <div class="sidebar_Text"><span>Локации</span></div>
             </div>
@@ -424,5 +424,8 @@
     </div>
 
 </footer>
+
+<script src="script/modal.js"></script>
+<script src="script/script.js"></script>
 </body>
 </html>
